# lcars-voice

./: .gitignore  CLAUDE.md  LICENSE
.github/workflows/: lcars-voice-release.yml
docker-claude/: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
docker-claude/azure/: README.md
docs/plans/: 2026-01-17-lcars-voice-design.md  2026-01-17-lcars-voice-implementation.md  2026-02-24-slack-to-markdown-design.md  2026-02-24-slack-to-markdown-implementation.md  LCARS-VOICE-RESUME-NOTES.md
lcars-voice/: .gitignore  CLAUDE.md  README.md  install.sh  lcars-voice-toggle.sh  package-lock.json  package.json
lcars-voice/docs/: macos-portability.md  production-installation.md
lcars-voice/scripts/: import-meeting.py  install-desktop.sh  install-keybinding.sh  lcars-launch.sh  whisper-wrapper.py
lcars-voice/src-tauri/: Cargo.toml  tauri.conf.json
lcars-voice/src-tauri/.cargo/: config.toml
lcars-voice/src-tauri/capabilities/: default.json
lcars-voice/src-tauri/icons/: icon.icns
lcars-voice/src-tauri/src/: audio_sources.rs  database.rs  logging.rs  main.rs  meeting.rs  meeting_transcription.rs  model_manager.rs  paths.rs  recording.rs  transcription.rs
meeting-transcripts/: .env.example  .gitignore  CLAUDE.md  README.md  diarize.py  download-recordings.sh  fetch-jira-info.sh  process-local-recordings.sh  process-recordings.sh  segment-transcript.py  transcribe-all.sh  whisper-wrapper.py
slack-to-markdown/: .env.example  CLAUDE.md  requirements.txt  setup.sh
voice-to-text/: README.md  install.sh
zoom-recorder/: CLAUDE.md  setup.sh
(+54 files in other folders)
