[package]
name = "lcars-voice"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
tokio = { version = "1", features = ["rt", "net", "io-util"] }
cpal = "0.15"
rubato = "0.14"
whisper-rs = "0.12"
reqwest = { version = "0.12", features = ["blocking"] }
hound = "3.5"
chrono = { version = "0.4", features = ["serde"] }
